@@ -131,9 +131,8 @@ ChIPSeqSpikeDatasetListBoost) can also be considered to speed up the analysis.
 'exportBigWigs' output the binding values from the GRanges objects contained in
  inputBigWigLoaded and experimentListLoaded slots. 
  
-On Windows operating system, reading of BigWig files may fail due to the 
-Bioconductor package rtracklayer >= 1.37.6 that does not support this file 
-format.
+On Windows operating system, due to the Bioconductor package rtracklayer >= 
+1.37.6 not supporting bigWig files, this class is not available.
 }
 
 
