@@ -48,9 +48,10 @@ ChIPSeqSpike will be of great value to the genomics community.
 
 # Standard workflow
 ## Note for Windows users
-On Windows operating system, reading of BigWig files may fail due to the 
+On Windows operating system, reading of BigWig files fail due to the 
 Bioconductor package [rtracklayer >= 1.37.6](https://bioconductor.org/packages/release/bioc/html/rtracklayer.html) 
-that does not support this file format.
+that does not support this file format. Therefore, the boost mode, the input 
+subtraction method, and scaling method do not work on this operating system.
 
 ## Quick start
 A case study reported Chromatin Immuno-Precipitation followed by Sequencing 
